now using only one CSS style sheet

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -5,16 +5,6 @@
 	xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Assistant Performer</title>
-		<link
-			href="http://james-ingram-act-two.de/fontsStyleSheet.css"
-			media="all"
-			rel="stylesheet"
-			type="text/css" />		
-        <link
-			href="http://james-ingram-act-two.de/styleSheet.css"
-			media="all"
-			rel="stylesheet"
-			type="text/css" />
         <link
 			href="assistantPerformerStyleSheet.css"
 			media="all"
@@ -25,7 +15,7 @@
 
 	</head>
 	<body
-		style="text-align:center">
+		style="text-align:center; font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif;  ">
 		<div id="centredReferenceDiv" class="centredReference">
             <p class="header1">Assistant Performer&nbsp;
                 <span style="color: #FF0000; font-size: 13px">(work in progress)</span></p>
@@ -33,9 +23,10 @@
             <div style="text-align: center">
                <a  
 			        id="aboutAssistantPerformerLink"
+                    style="font-size: 13px;"
 			        href="http://james-ingram-act-two.de/open-source/publicAssistantPerformer/aboutAssistantPerformer.html">About this version of the Assistant Performer</a>
-    			<div id="options" style="font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; 
-                    font-size: 12px;
+    			<div id="options"
+                    style="font-size: 12px;
                     background-color: #F6F6F6;
                     border: 1px solid #008000;
                     margin-top: 10px;
