continuing work on assistant (still incomplete)
- added jiAssistant.js to assistantPerformer.html
- which should now be okay.
- jiAPControls.js: added jiAssistant namespace etc.
- jiAssistant.js: minor changes
- jiSequence.js: added pubilc functions totalMsDuration() changeSpeed()

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -418,6 +418,7 @@
     <script src="js/jiTrack.js" type="text/javascript"></script>
     <script src="js/jiMIDIChord.js" type="text/javascript"></script>
     <script src="js/jiSequence.js" type="text/javascript"></script>
+    <script src="js/jiAssistant.js" type="text/javascript"></script>
     <script src="js/jiScore.js" type="text/javascript"></script>
     <script src="js/jiAPTracksControl.js" type="text/javascript"></script>
     <script src="js/jiAPControls.js" type="text/javascript"></script>
